--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-family: 'Montserrat', sans-serif; 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap');
 
 
 body{
@@ -18,6 +18,7 @@ section{
     justify-content: center;
     align-items: center;
     margin-top: 12rem;
+
 
 } 
 
